patterns/01-modules/navigation/nav-main-list/nav-main-list.css
/*
 * Module: Nav Main List
 */
:root{
    --nav-main-link-color: var(--color-white);
    --nav-main-link-color-active: var(--color-primary);
}


.nav-main {
    display: none;

    @media (--viewport-sm-min) {
        display: block;
    }
}

.nav-main-list {
    list-style: none;
    padding: 0;
    margin: 0;
}

.nav-main-list__item {
    display: inline-block;
    margin-right: 50px;

    a {
        color: var(--nav-main-link-color);
        text-decoration: none;
    }

    &:hover {
        color: var(--nav-main-link-color);

        a {
            color: var(--nav-main-link-color);
            text-decoration: underline;
        }
    }

    &:last-child {
        margin-right: 0;
    }
}

a.nav-main-list__item--active {
    color: var(--nav-main-link-color-active);
    text-decoration: underline;
}

